--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
+@import "tailwindcss";
+@import "highlight.js/styles/github-dark";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@import "primeicons/primeicons.css";
+@plugin "tailwindcss-primeui";/* You can add global styles to this file, and also import other style files */
+
 /* You can add global styles to this file, and also import other style files */
